--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ package:
 source:
   url: https://github.com/awslabs/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: a4e7ac6c6f840cb6ab56b8ee0bcd94a61c59d68ca42570bca518432da4c94273
+  patches:
+    - patches/0001-Explicitly-remove-Werror.patch
 
 build:
   number: 0
@@ -16,9 +18,11 @@ build:
 
 requirements:
   build:
+    - patch  # [not win]
+    - m2-patch  # [win]
     - {{ compiler('c') }}
     - ninja-base
-    - cmake
+    - cmake >=3.9
 
 test:
   commands:
