--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "aws-c-common" %}
-{% set version = "0.12.3" %}
+{% set version = "0.12.4" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://github.com/awslabs/{{ name }}/archive/v{{ version }}.tar.gz
-  sha256: a4e7ac6c6f840cb6ab56b8ee0bcd94a61c59d68ca42570bca518432da4c94273
+  sha256: 0b7705a4d115663c3f485d353a75ed86e37583157585e5825d851af634b57fe3
   patches:
     - patches/0001-Explicitly-remove-Werror.patch
 
@@ -18,8 +18,7 @@ build:
 
 requirements:
   build:
-    - patch  # [not win]
-    - m2-patch  # [win]
+    - {{ stdlib('c') }}
     - {{ compiler('c') }}
     - ninja-base
     - cmake >=3.9
@@ -30,10 +29,10 @@ test:
     - test -f $PREFIX/include/aws/common/config.h  # [unix]
     - test -f $PREFIX/lib/cmake/aws-c-common/modules/AwsCFlags.cmake  # [unix]
     - test -f $PREFIX/lib/cmake/aws-c-common/modules/AwsFindPackage.cmake  # [unix]
-    - if not exist %PREFIX%\\Library\\bin\\aws-c-common.dll exit 1  # [win]
-    - if not exist %PREFIX%\\Library\\include\\aws\\common\\config.h exit 1  # [win]
-    - if not exist %PREFIX%\\Library\\lib\\cmake\\aws-c-common\\modules\\AwsCFlags.cmake exit 1  # [win]
-    - if not exist %PREFIX%\\Library\\lib\\cmake\\aws-c-common\\modules\\AwsFindPackage.cmake exit 1  # [win]
+    - if not exist %LIBRARY_BIN%\aws-c-common.dll exit 1  # [win]
+    - if not exist %LIBRARY_INC%\aws\common\config.h exit 1  # [win]
+    - if not exist %LIBRARY_LIB%\cmake\aws-c-common\modules\AwsCFlags.cmake exit 1  # [win]
+    - if not exist %LIBRARY_LIB%\cmake\aws-c-common\modules\AwsFindPackage.cmake exit 1  # [win]
 
 about:
   home: https://github.com/awslabs/aws-c-common
